# Entrega_Final_MLOPS

./: Proyecto_final_parte_1.ipynb  Proyecto_final_parte_1V2.ipynb  README.md  main.py  proyecto_final_parte_1.py  pyproject.toml
income-classifier/: .gitignore  Dockerfile.api  Dockerfile.pipeline  README.md  clasificador_ingresos.html  docker-compose.yml  requirements.api.txt  requirements.pipeline.txt
income-classifier/src/: api.py  pipeline.py
