[project]
name = "entrega-final-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gunicorn>=23.0.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=6.30.1",
    "kagglehub>=1.0.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "mlxtend>=0.23.4",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "prefect>=3.4.12",
    "pyarrow>=21.0.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "xgboost>=3.0.4",
]

[tool.uv.workspace]
members = [
    "04-Deployment/deploy/web-service",
    "04-Deployment/deploy/web-service/taxi-prediction",
    "04-Deployment/deploy/web-service-docker",
    "01-Intro-ML/my-first-env-with-uv",
    "mi_primer_entorno",
]
